--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+
 html,
 body {
   padding: 0;
@@ -24,3 +25,8 @@ a {
     background: black;
   }
 }
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
